--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Sure Bets</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sure Bets offers football betting tips for EPL and local matches, including Man U predictions. Bet responsibly!">
+    <meta name="keywords" content="football betting tips, Man U predictions, EPL betting, Sure Bets, Siaya football">
+    <meta name="author" content="Jacob Ochino">
+    <title>Sure Bets - Football Betting Tips</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,7 +21,7 @@
     </header>
     <main>
         <h2>Welcome to Sure Bets!</h2>
-        <p>Your spot for sharp football betting tips. From EPL to local matches, bet responsibly!</p>
+        <p>Your spot for sharp football betting tips. From EPL to local matches, get the best Man U predictions and more. Bet responsibly!</p>
     </main>
     <footer>
         <p>© 2025 Sure Bets. Gamble responsibly, 18+ only. Follow <a href="https://x.com/jacobochino147">@jacobochino147</a></p>
