--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sure Bets offers football betting tips for EPL and local matches, including Man U predictions. Bet responsibly!">
-    <meta name="keywords" content="football betting tips, Man U predictions, EPL betting, Sure Bets, Siaya football">
+    <meta name="description" content="About Sure Bets and Jacob, a Man U fan from Siaya sharing football betting tips.">
+    <meta name="keywords" content="Sure Bets about, football tips, Man U fan, Siaya">
     <meta name="author" content="Jacob Ochino">
-    <title>Sure Bets - Football Betting Tips</title>
+    <title>Sure Bets - About</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,8 +20,8 @@
         </nav>
     </header>
     <main>
-        <h2>Welcome to Sure Bets!</h2>
-        <p>Your spot for sharp football betting tips. Check out my <a href="tips.html">latest tips</a> for EPL and local matches, all with a Man U vibe. Bet responsibly!</p>
+        <h2>About Sure Bets</h2>
+        <p>Hey, I’m a massive Man U fan from  Kenya. Sure Bets is my spot to share football betting tips, from EPL to local matches. I love the game, the vibe, and helping fans make smart bets—always responsibly!</p>
     </main>
     <footer>
         <p>© 2025 Sure Bets. Gamble responsibly, 18+ only. Follow <a href="https://x.com/jacobochino147">@jacobochino147</a></p>
