--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sure Bets offers football betting tips for EPL and local matches, including Man U predictions. Bet responsibly!">
-    <meta name="keywords" content="football betting tips, Man U predictions, EPL betting, Sure Bets, Siaya football">
+    <meta name="description" content="Contact Sure Bets for football betting tips and feedback.">
+    <meta name="keywords" content="Sure Bets contact, football tips, Man U betting">
     <meta name="author" content="Jacob Ochino">
-    <title>Sure Bets - Football Betting Tips</title>
+    <title>Sure Bets - Contact</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,8 +20,9 @@
         </nav>
     </header>
     <main>
-        <h2>Welcome to Sure Bets!</h2>
-        <p>Your spot for sharp football betting tips. Check out my <a href="tips.html">latest tips</a> for EPL and local matches, all with a Man U vibe. Bet responsibly!</p>
+        <h2>Contact Me</h2>
+        <p>Got feedback or want to talk football? Reach me on X!</p>
+        <p><a href="https://x.com/jacobochino147">@jacobochino147</a></p>
     </main>
     <footer>
         <p>© 2025 Sure Bets. Gamble responsibly, 18+ only. Follow <a href="https://x.com/jacobochino147">@jacobochino147</a></p>
